[gd_scene load_steps=5 format=3 uid="uid://djqevu5mpndwa"]

[ext_resource type="PackedScene" uid="uid://dkuug16ke60wh" path="res://Scenes/laser.tscn" id="1_g7mjg"]
[ext_resource type="Script" path="res://Scenes/main.gd" id="1_nomae"]
[ext_resource type="PackedScene" uid="uid://yocbirg225wt" path="res://Scenes/mirror.tscn" id="2_6nsyl"]
[ext_resource type="PackedScene" uid="uid://db4wpu213jqyc" path="res://Scenes/king.tscn" id="4_kfvhc"]

[node name="Main" type="Node2D"]
script = ExtResource("1_nomae")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Player1Pieces" type="Node2D" parent="."]

[node name="LaserEmitter" parent="Player1Pieces" instance=ExtResource("1_g7mjg")]
position = Vector2(-62, 37)

[node name="Mirror" parent="Player1Pieces" instance=ExtResource("2_6nsyl")]
position = Vector2(29, 37)
rotation = 3.14159
scale = Vector2(1, 1)

[node name="King" parent="Player1Pieces" instance=ExtResource("4_kfvhc")]
position = Vector2(29, -18)

[node name="Player2Pieces" type="Node2D" parent="."]
